# dagron

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE  README.md  SECURITY.md  compose.yaml
.github/workflows/: ci.yml  docker.yml
charts/dagron/: .helmignore  Chart.yaml  README.md  artifacthub-repo.yml  values.yaml
charts/dagron/templates/: NOTES.txt  _helpers.tpl  dagron-api.yaml  engine.yaml  env-secret.yaml  frontend.yaml  ingress.yaml  postgres.yaml  secret.yaml  ui-secret.yaml
crates/dagron-api/: .dockerignore  Cargo.toml  Dockerfile  README.md
crates/dagron-api/src/: auth.rs  expand.rs  identity.rs  main.rs  objstore.rs  state.rs  stream.rs  tmpl.rs
crates/dagron-api/src/routes/: archive.rs  audit.rs  backfills.rs  badge.rs  control.rs  environments.rs  gitrepos.rs  gitsync.rs  graph.rs  health.rs  login.rs  mod.rs  ops.rs  runs.rs  schedules.rs  search.rs  settings.rs  stream.rs  workflows.rs
crates/dagron-artifact/: Cargo.toml  README.md
crates/dagron-artifact/src/: lib.rs
crates/dagron-core/: Cargo.toml  README.md
crates/dagron-core/migrations/: 001_create_tables.sql  003_leader_election.sql  004_dead_letters.sql  005_workflows.sql  006_schedules.sql  007_schedule_backfills.sql  008_event_outbox.sql  009_auto_backfill.sql  010_run_deadline.sql  011_schedule_timezone.sql  012_schedule_gates.sql  013_trigger_rule.sql  014_allow_failure.sql  015_deadline_alert.sql  016_result_from.sql  017_backfills.sql  018_approval.sql  019_runner_class.sql  020_archived_runs.sql  021_environments.sql
crates/dagron-core/migrations_pg/: 001_create_tables.sql  002_unique_task_name.sql  003_leader_election.sql  004_dead_letters.sql  005_workflows.sql  006_schedules.sql  007_schedule_backfills.sql  008_users.sql  009_git_repos.sql  010_workflow_description.sql  011_event_outbox.sql  012_auto_backfill.sql  013_run_deadline.sql  014_schedule_timezone.sql  015_schedule_gates.sql  016_trigger_rule.sql  017_allow_failure.sql  018_deadline_alert.sql  019_result_from.sql  020_backfills.sql  021_approval.sql  022_runner_class.sql  023_runner_class_index.sql  024_archived_runs.sql  025_int4_to_bigint.sql  026_environments.sql
crates/dagron-core/src/: dag.rs  db.rs  expand.rs  lib.rs  metrics.rs  models.rs
crates/dagron-core/src/db/: postgres.rs  sqlite.rs
crates/dagron-crypto/: Cargo.toml
crates/dagron-crypto/src/: lib.rs
crates/dagron-engine/: Cargo.toml  README.md  openapi.yaml
crates/dagron-engine/assets/swagger-ui/: VERSION
crates/dagron-engine/src/: api.rs  archive_compact.rs  backfill.rs  backfill_jobs.rs  cron.rs  environments.rs  gc.rs  hooks.rs  leadership.rs  lib.rs  notify.rs  objstore.rs  schedule.rs  schedule_time.rs  stale_ready.rs  validate.rs
crates/dagron-executor/: Cargo.toml  README.md
crates/dagron-executor/src/: docker_executor.rs  executor.rs  kube_executor.rs  lib.rs  redact.rs  secrets.rs  worker.rs
crates/dagron-forge/: Cargo.toml  README.md
crates/dagron-forge/src/: lib.rs
crates/dagron-identity/: Cargo.toml  README.md
crates/dagron-identity/src/: lib.rs
crates/dagron-import/: Cargo.toml
crates/dagron-import/src/: lib.rs  main.rs
crates/dagron-lineage/: Cargo.toml  README.md
crates/dagron-lineage/src/: lib.rs
crates/dagron-logging/: Cargo.toml  README.md
crates/dagron-logging/src/: lib.rs
crates/dagron-mcp/: Cargo.toml  Dockerfile
crates/dagron-mcp/src/: lib.rs  main.rs
crates/dagron-plan/: Cargo.toml  README.md
crates/dagron-plan/src/: lib.rs  main.rs
crates/dagron-source/: Cargo.toml  README.md
crates/dagron-source/src/: ingest.rs  lib.rs  source.rs
docs/: API.md  ARCHITECTURE.md  CONFIG.md  HOWTO.md  MCP.md  OPERATIONS.md
docs/dockerhub/: README.md  dagron-api.md  dagron-chart.md  dagron-engine.md  dagron-frontend.md  dagron-mcp.md
examples/: .gitignore  controller_stress.yaml  cron.yaml  deadline_fanout.yaml  docker_headroom.yaml  simple_dag.yaml  windows_headroom.yaml
examples/backfill/: README.md  sales_rollup.yaml  score_batch.yaml  train_experiment.yaml
examples/gitops/: README.md
examples/gitops/appsets/: dagron-workflows-matrix.yaml  dagron-workflows.yaml
examples/gitops/bootstrap/: root-app.yaml
examples/gitops/platform/: dagron-platform.yaml
examples/gitops/projects/: dagron.yaml
examples/monitoring/: README.md  compose.yaml
examples/monitoring/prometheus/: prometheus.yml
examples/sdk/: README.md
examples/sdk/python/: 01_quickstart.py  02_workflow_and_schedule.py  03_stream_run.py  04_rerun_failed.py  _bootstrap.py  _config.py
examples/sdk/typescript/: 01_quickstart.mjs
examples/templates/: 01_dag_of_dags.yaml  02_parameters.yaml  03_fanout_map.yaml  04_scatter_gather.yaml  05_dynamic_shards_withparam.yaml  06_recursion_countdown.yaml  07_recursion_divide_conquer.yaml  08_conditional_branch.yaml  09_nested_templates.yaml  10_matrix_nested_fanout.yaml  11_diamond_of_subdags.yaml  12_retry_wrapper.yaml  13_fanout_then_subdag.yaml  README.md
examples/templates/airflow/: 01_dag_of_dags.py  02_parameters.py  03_fanout_map.py  04_scatter_gather.py  05_dynamic_shards_withparam.py  06_recursion_countdown.py  07_recursion_divide_conquer.py  08_conditional_branch.py  09_nested_templates.py  10_matrix_nested_fanout.py  11_diamond_of_subdags.py  12_retry_wrapper.py  13_fanout_then_subdag.py  README.md
examples/templates/argo/: 01_dag_of_dags.yaml  02_parameters.yaml  03_fanout_map.yaml  04_scatter_gather.yaml  05_dynamic_shards_withparam.yaml  06_recursion_countdown.yaml  07_recursion_divide_conquer.yaml  README.md  (+6 more)
examples/ui/: 01_hello.yaml  02_diamond.yaml  03_etl.yaml  04_chained_parent.yaml  README.md
frontend/: .gitignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/scripts/: copy-monaco.mjs
sdks/: README.md
sdks/python/: .gitignore  README.md  RELEASING.md  ROADMAP.md  dagron.py  pyproject.toml  test_dagron.py
sdks/typescript/: client.test.mjs  dag.test.mjs  index.d.ts  index.mjs  package.json
src/: dag.rs  executor.rs  lib.rs  main.rs  runner.rs  source.rs
(+62 files in other folders)
