# Workspace root. The `dagron` engine binary is the root package; the library
# crates are members so the whole module shares one Cargo.lock + target dir.
[workspace]
members = ["crates/dagron-core", "crates/dagron-executor", "crates/dagron-source", "crates/dagron-engine", "crates/dagron-api", "crates/dagron-identity", "crates/dagron-artifact", "crates/dagron-crypto", "crates/dagron-mcp", "crates/dagron-import", "crates/dagron-plan", "crates/dagron-lineage", "crates/dagron-forge", "crates/dagron-logging"]
# A sibling `ee/` directory (its own separate workspace, not present here) is
# excluded so this workspace always builds standalone.
exclude = ["ee"]
resolver = "2"

[package]
name = "dagron"
version = "0.1.0"
edition = "2021"
description = "dagron — durable DAG workflow runner on ractor: reconcile loop, pluggable executors (local + Docker), SQLite/Postgres backends."

[[bin]]
name = "dagron"
path = "src/main.rs"

[features]
# The engine is a thin shell over the dagron-engine library; feature names
# are unchanged but forward to it. default = full scheduler with the ops surface;
# drop `ops` (and pick a backend) for a lean reconcile-only daemon, e.g.
#   cargo build --no-default-features --features sqlite
default = ["sqlite", "ops"]
sqlite = ["dagron-engine/sqlite"]
postgres = ["dagron-engine/postgres"]
ops = ["dagron-engine/ops"]
kubernetes = ["dagron-engine/kubernetes"]
# Optional feature: auto-backfill, run_reruns, parameterized rerun, extra
# metrics, and outbox eventing. Implies `ops`.
enterprise = ["dagron-engine/enterprise"]

[dependencies]
# All engine logic lives in dagron-engine; this binary just calls run() with the
# default seams. default-features = false so a `--features postgres` build does
# not also drag in the engine's default `sqlite` backend (they collide).
dagron-engine = { path = "crates/dagron-engine", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"

[dev-dependencies]
# The crash-recovery integration test runs the built `dagron` binary and inspects
# its SQLite datastore directly (sqlx) with unique temp paths (uuid).
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
