[package]
name = "dagron-artifact"
version = "0.1.0"
edition = "2021"
description = "dagron artifact store seam: the ArtifactStore trait + a local-filesystem default. Passes data files between tasks in a run; an S3/GCS backend plugs in behind the same trait."

[lib]
name = "dagron_artifact"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["fs", "rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
