[package]
name = "dagron-mcp"
version = "0.1.0"
edition = "2021"
description = "dagron MCP server — exposes the dagron management API (submit/list/inspect/cancel/logs) as Model Context Protocol tools over stdio, so AI agents can drive workflows."

[[bin]]
name = "dagron-mcp"
path = "src/main.rs"

[lib]
name = "dagron_mcp"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
